--- a/index.html
+++ b/index.html
@@ -197,8 +197,11 @@
   </script>
 
   <script src="js/random.js"></script>
+  <script src="js/open-close-popup.js"></script>
   <script src="js/game.js"></script>
+  <script src="js/setup.js"></script>
   <script src="js/stat.js"></script>
+
 </body>
 
 </html>
