--- a/index.html
+++ b/index.html
@@ -58,12 +58,12 @@
     <div class="demo"></div>
 
     <div class="setup-open">
-      <img src="./img/user-1.jpg" class="setup-open-icon">
+      <img src="./img/user-1.jpg" class="setup-open-icon" tabindex="0">
     </div>
   </header>
 
   <div class="overlay setup hidden">
-    <form class="setup-wizard-form" method="post" enctype="multipart/form-data" autocomplete="off">
+    <form class="setup-wizard-form" action="https://js.dump.academy/code-and-magick" method="post" enctype="multipart/form-data" autocomplete="off">
 
       <div class="setup-title">
         <div class="setup-user">
@@ -72,7 +72,7 @@
             <input type="file" name="avatar">
           </div>
           <label>
-            <input type="text" name="username" maxlength="25" required class="setup-user-name" value="Синий Пендальф" />
+            <input type="text" name="username" minlength="2" maxlength="25" required class="setup-user-name" value="Синий Пендальф" />
           </label>
         </div>
 
@@ -197,10 +197,12 @@
   </script>
 
   <script src="js/random.js"></script>
+  <script src="js/utils.js"></script>
   <script src="js/open-close-popup.js"></script>
   <script src="js/game.js"></script>
   <script src="js/setup.js"></script>
   <script src="js/stat.js"></script>
+  <script src="js/wizard.js"></script>
 
 </body>
 
