--- a/index.html
+++ b/index.html
@@ -199,6 +199,7 @@
   <script src="js/random.js"></script>
   <script src="js/utils.js"></script>
   <script src="js/open-close-popup.js"></script>
+  <script src="js/move-popup.js"></script>
   <script src="js/game.js"></script>
   <script src="js/setup.js"></script>
   <script src="js/stat.js"></script>
