--- a/index.html
+++ b/index.html
@@ -197,12 +197,14 @@
   </script>
 
   <script src="js/random.js"></script>
-  <script src="js/utils.js"></script>
+  <script src="js/util.js"></script>
+  <script src="js/backend.js"></script>
   <script src="js/open-close-popup.js"></script>
   <script src="js/move-popup.js"></script>
   <script src="js/game.js"></script>
-  <script src="js/setup.js"></script>
   <script src="js/stat.js"></script>
+  <script src="js/similar.js"></script>
+  <script src="js/render.js"></script>
   <script src="js/wizard.js"></script>
 
 </body>
