--- a/index.html
+++ b/index.html
@@ -196,9 +196,10 @@
     };
   </script>
 
-  <script src="js/random.js"></script>
   <script src="js/util.js"></script>
+  <script src="js/random.js"></script>
   <script src="js/backend.js"></script>
+  <script src="js/debounce.js"></script>
   <script src="js/open-close-popup.js"></script>
   <script src="js/move-popup.js"></script>
   <script src="js/game.js"></script>
