--- a/index.html
+++ b/index.html
@@ -200,6 +200,7 @@
   <script src="js/random.js"></script>
   <script src="js/backend.js"></script>
   <script src="js/debounce.js"></script>
+  <script src="js/avatar.js"></script>
   <script src="js/open-close-popup.js"></script>
   <script src="js/move-popup.js"></script>
   <script src="js/game.js"></script>
